# MacNfcTool

./: .gitignore  README.md  index.html  package-lock.json  package.json  run.sh  vite.config.ts
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/native/: nfc_bridge.c
src-tauri/src/: libnfc.rs  main.rs
